--- a/ModernArtUI/app/src/main/res/values/strings.xml
+++ b/ModernArtUI/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">ModernArtUI</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="more_info">More Information</string>
+    <string name="moma_url">http://www.moma.org/</string>
+    <string name="dialog_text">Inspired by the works of artists such as Pret Mondrian and Ben Nicholson. \n \n Click below to learn more!</string>
+    <string name="dismiss_dialog_text">Not Now</string>
+    <string name="visit_moma">Visit MOMA</string>
 </resources>
